{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 89,
  "lineage": "8a4d4edb-0169-02de-0946-c53237683bd8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker_host",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebbf2179e615c338",
            "arn": "arn:aws:ec2:us-east-2:965156896946:instance/i-08f60e23a0d66f87f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08f60e23a0d66f87f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mdas_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-01a18d0bad002ef7f",
            "private_dns": "ip-10-2-1-204.us-east-2.compute.internal",
            "private_ip": "10.2.1.204",
            "public_dns": "ec2-18-217-130-21.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.130.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0d774dcc12b1290e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ab2cc5f2508b717",
            "tags": {
              "Name": "mdas docker host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-014ccec9ce655e24d"
            ]
          },
          "depends_on": [
            "aws_key_pair.auth",
            "aws_security_group.mdas",
            "aws_subnet.mdas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mdas",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0664c195cbd5834e7",
            "owner_id": "965156896946",
            "vpc_id": "vpc-02223861d99befe21"
          },
          "depends_on": [
            "aws_vpc.mdas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0664c195cbd5834e7",
            "id": "r-rtb-05e858441941769161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e85844194176916",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.mdas",
            "aws_vpc.mdas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mdas",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:965156896946:security-group/sg-014ccec9ce655e24d",
            "description": "Used for web services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014ccec9ce655e24d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mdas_security_group",
            "name_prefix": null,
            "owner_id": "965156896946",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02223861d99befe21"
          },
          "depends_on": [
            "aws_vpc.mdas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mdas",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:965156896946:subnet/subnet-04ab2cc5f2508b717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-04ab2cc5f2508b717",
            "map_public_ip_on_launch": true,
            "owner_id": "965156896946",
            "vpc_id": "vpc-02223861d99befe21"
          },
          "depends_on": [
            "aws_vpc.mdas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mdas",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:965156896946:vpc/vpc-02223861d99befe21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0ccb6a4fd292b3128",
            "default_route_table_id": "rtb-05e85844194176916",
            "default_security_group_id": "sg-00df7f3a4fffd4f53",
            "dhcp_options_id": "dopt-883d49e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02223861d99befe21",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05e85844194176916",
            "owner_id": "965156896946"
          }
        }
      ]
    }
  ]
}